# karia2

./: .gitattributes  .gitattributes.bak  .gitignore  CMakeLists.txt  ChangeLog.txt  DiskInfo.cpp  DiskInfo.h  INSTALL  NullGet.pro  NullGet.qrc  NullGet.rc  NullGet_resource.rc  README  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  abstractstorage.cpp  abstractstorage.h  abstractui.cpp  abstractui.h  aria2cwsjsonmanager.cpp  aria2cwsjsonmanager.h  aria2embedmanager.cpp  aria2embedmanager.h  aria2jsonmanager.cpp  aria2jsonmanager.h  aria2libaria2manager.cpp  aria2libaria2manager.h  aria2manager.cpp  aria2manager.h  aria2managerfactory.cpp  aria2managerfactory.h  aria2rpcmanager.cpp  aria2rpcmanager.h  aria2rpcserver.cpp  aria2rpcserver.h  aria2wsjsonmanager.cpp  aria2wsjsonmanager.h  aria2wsjsonrpcmanager.h  aria2wssjsonrpcmanager.h  (+173 more)
aria2-1.13.0/src/: config.h
aria2-1.16.1/: config.h  config.h.mingw32
browser/: iegeturl.html
data/: karia2.desktop
doc/: C++.txt  ChangeLog.txt  Doxyfile  INSTALL  MPC.txt  QtCodingStyle  TODO  TODO.txt  Torrent 获取文件流程.odg  a2help.txt  addbom.sh  all.txt  aria2-1.16.1_last_statcalc.patch  aria2-1.9.2_redirect_no_cookie_no_refer.patch  aria2c.txt  browsers.txt  build.txt  flashget.txt  https.txt  karia2-uml.edx  manual.txt  metafile.txt  misc.txt  qt note.txt  skype.txt  thunder.txt
efg/aria2-1.16.1/: config.h.linux
icons/status/: .directory
karia2-svn/: karia2-svn.kdev4
karia2-svn/src/: mainwindow.ui
libmaia/: CMakeLists.txt  Changelog  maiaObject.cpp  maiaObject.h  maiaXmlRpcClient.cpp  maiaXmlRpcClient.h  maiaXmlRpcServerConnection.cpp  maiaXmlRpcServerConnection.h
libng/: qbihash.h
libwebsockets/: CMakeLists.txt  libwebsockets.pri
qjson/: qjson.pri
qjson/src/: qobjecthelper.cpp
qjsonrpc/: CMakeLists.txt
qjsonrpc/src/: qjsonrpc.pri  qjsonrpcservice.cpp
qtsingleapplication/: CMakeLists.txt  qtlocalpeer.cpp  qtlocalpeer.h  qtsingleapplication.cpp  qtsingleapplication.h
rpckey/: rpc.pri  rpc.pub
skynet/: libskynet.pri  skype.cpp  skype.h  skypeComm.h  skypeCommand.cpp  skypeCommand.h  skypeWin.cpp  skypeX11.cpp  skypecommand.cpp  skypecommand.h  skypecommon.h  skypecommon_mac.cpp  skypecommon_win.cpp  skypecommon_x11.cpp  xmessages.cpp  xmessages.h
skyserv/: database.cpp  database.h  main.cpp  mserv_ctl.sh  serv.sql  skyserv.cpp  skyserv.h  skyserv.pro  skyserv.ui  skyservapplication.cpp  skyservapplication.h
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/dummy/: dummy.cpp  dummy.h  dummy.ui  main.cpp
tests/tasktreeview/: main.cpp  tasktreeview.cpp  tasktreeview.h  tasktreeview.ui
translations/: karia2_en_US.ts  karia2_zh_CN.qm  karia2_zh_CN.ts  karia2_zh_TW.qm  karia2_zh_TW.ts  nullget_en_US.ts  nullget_zh_CN.qm  nullget_zh_CN.ts  nullget_zh_TW.qm  nullget_zh_TW.ts
